k8s/k8s-config/examples/ingress/ingress-bad.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bad
  namespace: qa
spec:
  rules:
  - host: acmecorp.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
